--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a>
             <a href="">Final Project</a>
         </nav>
+        <ul>
+            <li>
+                <a href="temples.html">Temple</a>
+            </li>
+        </ul>
     </header>
     <main>
 
