--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>WDD 131 - Dynamic Web Fundamentals - Tonny Lime</title>
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Tonny Lime -week01">
     <meta name="author" content=""
-    
+
 
 </head>
 <body>
@@ -21,9 +21,7 @@
             <a href="">Final Project</a>
         </nav>
         <ul>
-            <li>
-                <a href="temples.html">Temple</a>
-            </li>
+            <li><a href="place.html">Place</a></li>
         </ul>
     </header>
     <main>
