--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <a href="https://byui.instructure.com/.">I-Learn</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a>
             <a href="">Final Project</a>
+            <a href="place.html">Place</a>
+            <a href="filtered-temples.html"></a>
         </nav>
-        <ul>
-            <li><a href="place.html">Place</a></li>
-        </ul>
+       
     </header>
     <main>
 
