--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a>
             <a href="">Final Project</a>
             <a href="place.html">Place</a>
-            <a href="filtered-temples.html"></a>
+            <a href="filtered-temples.html">Filtered Temples</a>
         </nav>
        
     </header>
