--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="">Final Project</a>
             <a href="place.html">Place</a>
             <a href="filtered-temples.html">Filtered Temples</a>
+            <a href="weeko4/project/siteplan.html"></a>
         </nav>
        
     </header>
