--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <a href="">Final Project</a>
             <a href="place.html">Place</a>
             <a href="filtered-temples.html">Filtered Temples</a>
-            <a href="weeko4/project/siteplan.html"></a>
+            <a href="weeko4/project/siteplan.html">Subaru electrical Site Plan</a>
+            <a href="form.html">Form</a>
         </nav>
        
     </header>
