--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://www.linkedin.com/in/tonny-lime-72348242/">Linkedin</a>
             <a href="https://byui.instructure.com/.">I-Learn</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a>
-            <a href="">Final Project</a>
+            <a href="weeko4/project/index.html">Final Project</a>
             <a href="place.html">Place</a>
             <a href="filtered-temples.html">Filtered Temples</a>
             <a href="weeko4/project/siteplan.html">Subaru electrical Site Plan</a>
