--- a/weeko4/project/index.html
+++ b/weeko4/project/index.html
@@ -4,7 +4,7 @@
     <script src="scripts/getdates.js" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Subaru technician</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" href="styles/project.css">
