--- a/weeko4/project/index.html
+++ b/weeko4/project/index.html
@@ -48,7 +48,7 @@
                 <a href="cvt.html">constant velocity transmission</a>
                 <a href="dtc.html">DTCs description</a>
                 <a href="finance.html">DTCs Repair</a>
-                <a href="">Find Me</a>
+                <a href="find.html">Find Me</a>
             </li>
 
         </section>
